some more tries to fix python
still no luck, but i changed a couple things. so may as well save those.